# lab

./: README.md
ai/: README.md  pyproject.toml
ai/n-puzzle/: README.md  algorithms.py  args.py  heuristics.py  main.py  repr.py  state.py
algorithms/: README.md  complexities.ipynb  flake.nix  pyproject.toml
rl/: README.md  pyproject.toml
rl/maze/: README.md  agent.py  args.py  environment.py  main.py  moves.py
